tests/negative/neg_own_borrow_conflict.safe
-- Test: neg_own_borrow_conflict
-- Description: Accessing the lender while a mutable borrow is active.
--   The lender is frozen during the borrow scope. Any read, write,
--   or move of the lender during an active borrow is rejected.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.3.p99b:47108b45
-- Expected: REJECT borrow_conflict

package Borrow_Conflict_Test is

   type Data is record
      Value : Integer;
   end record;

   type Data_Ptr is access Data;

   --  Modify_Both: borrows Owner to Ref, then tries to read Owner
   --  while the borrow is still active.
   procedure Modify_Both is
      Owner : Data_Ptr = new ((Value = 10) as Data);
      Ref   : access Data = Owner;  -- borrow begins
      V     : Integer;
   begin
      Ref.all.Value = 20;
      --  Owner is frozen while Ref (the borrow) is active.
      V = Owner.all.Value;  -- ERROR: lender accessed during active borrow
   end Modify_Both;

end Borrow_Conflict_Test;
